# advent-of-code

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: pipeline.yml
src/aoc/: cli.py
src/aoc/year_2024/: __init__.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
test/: __init__.py  test_2024.py
